--- a/index.html
+++ b/index.html
@@ -235,6 +235,133 @@
           opacity: 1;
         }
       }
+
+      #console {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        max-width: 800px;
+        height: 60%;
+        background: rgba(0, 20, 0, 0.9);
+        border: 2px solid #0f0;
+        box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
+        color: #0f0;
+        font-family: "Courier New", monospace;
+        padding: 20px;
+        display: none;
+        z-index: 1000;
+        overflow: hidden;
+        animation: console-glow 2s infinite;
+      }
+
+      @keyframes console-glow {
+        0% {
+          box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
+        }
+        50% {
+          box-shadow: 0 0 30px rgba(0, 255, 0, 0.5);
+        }
+        100% {
+          box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
+        }
+      }
+
+      #console-header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: #0f0;
+        color: #000;
+        padding: 5px 10px;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      #console-close {
+        cursor: pointer;
+        background: none;
+        border: none;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+      }
+
+      #console-content {
+        height: calc(100% - 30px);
+        margin-top: 30px;
+        overflow-y: auto;
+        padding: 10px;
+        font-size: 14px;
+        line-height: 1.4;
+      }
+
+      #console-content::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      #console-content::-webkit-scrollbar-track {
+        background: rgba(0, 20, 0, 0.5);
+      }
+
+      #console-content::-webkit-scrollbar-thumb {
+        background: #0f0;
+      }
+
+      .console-line {
+        margin: 2px 0;
+        opacity: 0;
+        animation: type-in 0.1s forwards;
+      }
+
+      @keyframes type-in {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      .console-error {
+        color: #f00;
+      }
+
+      .console-warning {
+        color: #ff0;
+      }
+
+      .console-success {
+        color: #0f0;
+      }
+
+      #fetch-data {
+        background: rgba(0, 20, 0, 0.8);
+        color: #0f0;
+        border: 1px solid #0f0;
+        padding: 5px 10px;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-family: "Courier New", monospace;
+        margin-top: 10px;
+        animation: button-glow 2s infinite;
+      }
+
+      @keyframes button-glow {
+        0% {
+          box-shadow: 0 0 5px #0f0;
+        }
+        50% {
+          box-shadow: 0 0 15px #0f0;
+        }
+        100% {
+          box-shadow: 0 0 5px #0f0;
+        }
+      }
     </style>
   </head>
   <body>
@@ -259,6 +386,13 @@
     <div class="warning-overlay" id="warningOverlay">
       ⚠ IMPACT SIMULATION IN PROGRESS ⚠<br />
       STAND BY FOR ANALYSIS
+    </div>
+    <div id="console">
+      <div id="console-header">
+        <span>WEYLAND-YUTANI ORBITAL DATABASE ACCESS</span>
+        <button id="console-close">×</button>
+      </div>
+      <div id="console-content"></div>
     </div>
     <script type="importmap">
       {
@@ -665,6 +799,102 @@
           </span>
         </span>
       `;
+
+      // Add console UI functionality
+      const consoleUI = {
+        element: document.getElementById("console"),
+        content: document.getElementById("console-content"),
+        isVisible: false,
+
+        show() {
+          this.element.style.display = "block";
+          this.isVisible = true;
+        },
+
+        hide() {
+          this.element.style.display = "none";
+          this.isVisible = false;
+        },
+
+        async addLine(text, type = "") {
+          const line = document.createElement("div");
+          line.className = `console-line ${type}`;
+          line.textContent = text;
+          this.content.appendChild(line);
+          this.content.scrollTop = this.content.scrollHeight;
+          await new Promise((resolve) => setTimeout(resolve, 50)); // Delay between lines
+        },
+
+        clear() {
+          this.content.innerHTML = "";
+        },
+      };
+
+      document.getElementById("console-close").addEventListener("click", () => {
+        consoleUI.hide();
+      });
+
+      // Add fetch data button to controls
+      const fetchButton = document.createElement("button");
+      fetchButton.id = "fetch-data";
+      fetchButton.textContent = "UPDATE ORBITAL DATA";
+      controlsDiv.appendChild(fetchButton);
+
+      fetchButton.addEventListener("click", async () => {
+        consoleUI.show();
+        consoleUI.clear();
+
+        await consoleUI.addLine("INITIALIZING DATABASE CONNECTION...");
+        await consoleUI.addLine(
+          "ACCESSING HORIZONS TELNET SERVER...",
+          "console-warning"
+        );
+
+        try {
+          await consoleUI.addLine("> CONNECTING TO horizons.jpl.nasa.gov:6775");
+          await consoleUI.addLine("CONNECTION ESTABLISHED", "console-success");
+          await consoleUI.addLine(
+            "REQUESTING ORBITAL ELEMENTS FOR 2024 YR4..."
+          );
+
+          const response = await fetch("ephemeris.json");
+          const data = await response.json();
+
+          await consoleUI.addLine(
+            "ORBITAL ELEMENTS RECEIVED",
+            "console-success"
+          );
+          await consoleUI.addLine("ACCESSING SENTRY API...");
+          await consoleUI.addLine("> CONNECTING TO ssd-api.jpl.nasa.gov");
+          await consoleUI.addLine(
+            "RETRIEVING IMPACT RISK ASSESSMENT...",
+            "console-warning"
+          );
+
+          await consoleUI.addLine("DATA SYNCHRONIZED", "console-success");
+          await consoleUI.addLine(
+            `DETECTED ${data.impact_risk.potential_impacts.count} IMPACT SCENARIOS`
+          );
+          await consoleUI.addLine(
+            `TORINO SCALE: ${data.impact_risk.torino_scale.maximum}`,
+            "console-error"
+          );
+
+          await consoleUI.addLine("UPDATE COMPLETE", "console-success");
+
+          // Auto-close after completion
+          setTimeout(() => {
+            consoleUI.hide();
+            location.reload(); // Refresh to show new data
+          }, 3000);
+        } catch (error) {
+          await consoleUI.addLine("ERROR: " + error.message, "console-error");
+          await consoleUI.addLine(
+            "CONNECTION FAILED - RETRY RECOMMENDED",
+            "console-error"
+          );
+        }
+      });
     </script>
   </body>
 </html>
