--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>2024 YR4 Orbit (Three.js)</title>
+    <title>2024 YR4 Orbit Visualization</title>
     <link rel="icon" href="data:," />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Asteroid 2024 YR4 Threat Assessment" />
